--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="keywords"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-		<title>Animal World HTML Template</title>
+		<title>TERYET SAFARI - Nature's Touch, Your Safaris</title>
 		<!-- styles-->
 		<link rel="stylesheet" href="css/styles.min.css"/>
 		<!-- web-font loader-->
@@ -768,9 +768,9 @@
 					<div class="row bottom-50">
 						<div class="col-md-6 col-lg-4"><a class="logo logo--footer" href="index.html"></a>
 							<div class="footer__details">
-								<p><strong>Location:</strong> <span>av. Washington 165, NY CA 54003</span></p>
-								<p><strong>Phone:</strong> <a href="tel:+31859644725">+31 85 964 47 25</a> <a href="tel:+31859644725">+31 65 792 63 11</a></p>
-								<p><strong>Email:</strong> <a href="mailto:info@animalsworld.com">info@animalsworld.com</a></p>
+								<p><strong>Location:</strong> <span>Africa</span></p>
+								<p><strong>Phone:</strong> <a href="tel:+31859644725">+123 456 789 0</a> <a href="tel:+31859644725">+123 456 789 0</a></p>
+								<p><strong>Email:</strong> <a href="mailto:info@animalsworld.com">info@Teryetsafari.com</a></p>
 							</div>
 							<ul class="socials bottom-30">
 								<li class="socials__item"><a class="socials__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
