--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="keywords"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-		<title>TERYET SAFARI - Nature's Touch, Your Safaris</title>
+		<title>TERYET SAFARI & Lodges - Nature's Touch, Your Safaris</title>
 		<!-- styles-->
 		<link rel="stylesheet" href="css/styles.min.css"/>
 		<!-- web-font loader-->
@@ -422,8 +422,8 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-12 text-right">
-								<h1 class="text-section__title"><span>TERYET</span>SAFARI</h1>
-								<p class="text-section__text">Nature's Touch, Your Safaris</p>
+								<h6 class="text-section__title"  style="font-size: 110px imp;font-weight: 300;"><span>TERYET SAFARI & LODGES</span> </h6>
+								<p class="text-section__text" style="margin-top: 40px;">Nature's Touch, Your Safaris</p>
 							</div>
 						</div>
 					</div>
@@ -770,7 +770,7 @@
 							<div class="footer__details">
 								<p><strong>Location:</strong> <span>Africa</span></p>
 								<p><strong>Phone:</strong> <a href="tel:+31859644725">+123 456 789 0</a> <a href="tel:+31859644725">+123 456 789 0</a></p>
-								<p><strong>Email:</strong> <a href="mailto:info@animalsworld.com">info@Teryetsafari.com</a></p>
+								<p><strong>Email:</strong> <a href="mailto:info@animalsworld.com">info@Teryetsafari&lodges.com</a></p>
 							</div>
 							<ul class="socials bottom-30">
 								<li class="socials__item"><a class="socials__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
